--- a/views/partials/underline_navbar.handlebars
+++ b/views/partials/underline_navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-lighr bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     <a class="navbar-brand" href="#"> Navbar </a>
     <button class="navbar-toggler" type="button" data-toggler="collapse" data-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
@@ -12,6 +12,7 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
         </li>
+        <!--
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                 Dropdown
@@ -23,13 +24,16 @@
                 <a class="dropdown-item" href="#"> Something else here </a>
             </div>
         </li>
+        -->
         <li class="nav-item">
             <a class="nav-link" href="#"> Disabled </a>
         </li>
       </ul>  
-      <form class="form-inline my-2 my-lg-0">
+      <!-- 
+        <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-sucess my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      </form> 
+      -->
       </div>
 </nav>
