--- a/views/admin/addcategorias.handlebars
+++ b/views/admin/addcategorias.handlebars
@@ -1,3 +1,8 @@
+{{#each}}
+    <div class="alert alert-danger"> {{texto}} </div>
+{{else}}
+
+{{/each}}
 <h3>Nova categoria: </h3>
 <div class="card">
     <div class="card-body">
