--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -1,3 +1,15 @@
 <h2>Lista de categorias</h2>
 <hr>
 <a href="/admin/addcategorias"><button class="btn btn-sucess"> Nova categoria </button></a>
+
+{{#each categorias}}
+    <div class="card mt-4">
+        <div class="card-body">
+            <h4> {{nome}} </h4>
+            <small> Slug: {{slug}} </small> <br>
+            <small> Data de criacao: {{date}} </small>
+        </div>
+    </div>
+{{else}}
+
+{{/each}}
