--- a/views/admin/categorias.handlebars
+++ b/views/admin/categorias.handlebars
@@ -7,7 +7,8 @@
         <div class="card-body">
             <h4> {{nome}} </h4>
             <small> Slug: {{slug}} </small> <br>
-            <small> Data de criacao: {{date}} </small>
+            <small> Data de criacao: {{date}} </small> <br>
+            <a href="/admin/categorias/edit/{{_id}}"><button class="btn btn-sucess mt-4">Editar a categoria</button></a>
         </div>
     </div>
 {{else}}
