--- a/views/admin/editcategorias.handlebars
+++ b/views/admin/editcategorias.handlebars
@@ -6,7 +6,10 @@
 <h3>Editar categoria: </h3>
 <div class="card">
     <div class="card-body">
-        <form action="/admin/categorias/nova" method="post">
+        <form action="/admin/categorias/edit" method="post">
+
+            <input type="hidden" name="id" value="{{categoria._id}}">
+
             <label for="nome">Nome:</label>
             <input type="text" name="nome" id="nome" placeholder="Nome da categoria" class="form-control" value="{{categoria.nome}}">
 
